@@ -69,7 +69,7 @@
         <font>font13</font>
         <onleft>50</onleft>
         <onright>50</onright>
-        <onup>8</onup>
+        <onup>16</onup>
         <ondown>3</ondown>
       </control>
 
@@ -123,6 +123,19 @@
         <onleft>50</onleft>
         <onright>50</onright>
         <onup>5</onup>
+        <ondown>16</ondown>
+      </control>
+
+      <control>
+        <description>Party Mode button</description>
+        <type>radiobutton</type>
+        <id>16</id>
+        <posx>50</posx>
+        <posy>268</posy>
+        <label>589</label>
+        <onleft>50</onleft>
+        <onright>50</onright>
+        <onup>8</onup>
         <ondown>2</ondown>
       </control>
 
