@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 19-02-2006 added: Initial support for Music Party Mode.  Enable it from the Library view as it requires the database.
  - 19-02-2006 changed: Refactored the window open and window close processes.
  - 18-02-2006 changed: "Delete" and "Rename" in the context menu are only enabled if the share supports them
  - 18-02-2006 changed: iTunes playlists now adhere to the "shuffle playlists on load" option if you use PLAY on them
